k8s/kafka/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kafka
  name: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
