k8s/kafka/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: kafka
  name: kafka-ui-service
  labels:
    app: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
